# maigret-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp.json.example  pyproject.toml
.github/workflows/: docker-build.yml
src/maigret_mcp/: __init__.py  runner.py  server.py
templates/unraid/: maigret-mcp.xml
