[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "maigret-mcp"
version = "0.1.0"
description = "Dockerized MCP server wrapper for Maigret username OSINT searches"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "m0eak" }
]
dependencies = [
  "mcp>=1.2.0",
  "maigret>=0.6.1",
  "pydantic>=2.8.0"
]

[project.scripts]
maigret-mcp = "maigret_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maigret_mcp"]
